syntax = "proto3";

package ddec_networking;

service gnetworking {
    rpc SendValue(SendValueRequest) returns(SendValueResponse) {}
}

message SendValueRequest {
    bytes tag = 1;
    bytes value = 2;
}

message SendValueResponse {}
